openshift/pod_environment_vars.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-example-pod
spec:
  containers:
    - name: secret_test_container
    image: busybox
    command: [ "/bin/sh", "-c", "export" ]
    restartPolicy: Never
